[build-system]
requires = ["maturin>=1.4,<2.0"]
build-backend = "maturin"

[project]
name = "fast-geo-distance"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dynamic = ["version"]
dependencies = [
    "pip>=24.3.1",
    "pytest>=8.3.3",
    "ruff>=0.7.2",
]

[tool.maturin]
features = ["pyo3/extension-module"]

[tool.uv.sources]
fast-geo-distance = { workspace = true }

[dependency-groups]
dev = [
    "fast-geo-distance",
]
